--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/mysql-connector-java-5.1.18-bin.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/javax.mail.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/activation.jar/activation.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
